5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1723_2502.log
== TEST (2019-05-14 10:39:51) 
-- CODE:

n = int(input("Insira o numero natural: "))

soma = 0
i = 0

while(n > i):
	
	soma = soma + (1 / (1 * 2 * i + 1) * (3 ** i))
	i = i + 1
print(round(soma , 8))
-- OUTPUT:
4474.37066277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:40:07) 
-- CODE:

n = int(input("Insira o numero natural: "))

soma = 0
i = 0

while(n > i):
	
	soma = soma + (1 / ((1 * 2 * i + 1) * (3 ** i)))
	i = i + 1
print(round(soma , 8))
-- OUTPUT:
1.14051864
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:40:20) 
-- CODE:

n = int(input("Insira o numero natural: "))

soma = 0
i = 0

while(n > i):
	
	soma = soma + (1 / ((i * 2 * i + 1) * (3 ** i)))
	i = i + 1
print(round(soma , 8))
-- OUTPUT:
1.1258859
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:41:02) 
-- CODE:

n = int(input("Insira o numero natural: "))

soma = 0
i = 0

while(n > i):
	
	soma = soma + (1 / ((i * 2 * i + 1) * (3 ** i)))
	i = i + 1
	S = (12 ** 0.5) * soma
print(round(S , 8))
-- OUTPUT:
3.90018315
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:41:06) 
-- CODE:

n = int(input("Insira o numero natural: "))

soma = 0
i = 0

while(n > i):
	
	soma = soma + (1 / ((i * 2 * i + 1) * (3 ** i)))
	i = i + 1
	S = (12 ** 0.5) * soma
print(round(S , 8))
-- EXECUTION TIME:
0.185124
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.90018315
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.90018327
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.90017769
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:41:10) 
-- CODE:

n = int(input("Insira o numero natural: "))

soma = 0
i = 0

while(n > i):
	
	soma = soma + (1 / ((i * 2 * i + 1) * (3 ** i)))
	i = i + 1
	S = (12 ** 0.5) * soma
print(round(S , 8))
-- OUTPUT:
3.90018315
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:41:16) 
-- CODE:

n = int(input("Insira o numero natural: "))

soma = 0
i = 0

while(n > i):
	
	soma = soma + (1 / ((i * 2 * i + 1) * (3 ** i)))
	i = i + 1
	S = (12 ** 0.5) * soma
print(round(S , 8))
-- EXECUTION TIME:
0.175653
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.90018315
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.90018327
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.90017769
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:41:28) 
-- CODE:

n = int(input("Insira o numero natural: "))

soma = 0
i = 0

while(n > i):
	
	soma = soma + (1 / ((i * 2 * i + 1) * (3 ** i)))
	i = i + 1
	S = (12 ** 0.5) * soma
print(round(S , 8))
-- OUTPUT:
3.90018315
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:42:37) 
-- CODE:

n = int(input("Insira o numero natural: "))

soma = 0
i = 0

while(n > i):
	
	soma = soma + (1 / ((i * 2 * i + 1) * (3 ** i))) * (12 ** 0.5)
	i = i + 1

print(round(S , 8))
-- EXECUTION TIME:
0.148987
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2502/main.py", line 12, in <module>
    print(round(S , 8))
NameError: name 'S' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:42:43) 
-- CODE:

n = int(input("Insira o numero natural: "))

soma = 0
i = 0

while(n > i):
	
	soma = soma + (1 / ((i * 2 * i + 1) * (3 ** i))) * (12 ** 0.5)
	i = i + 1

print(round(soma , 8))
-- EXECUTION TIME:
0.143411
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.90018315
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.90018327
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.90017769
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:42:45) 
-- CODE:

n = int(input("Insira o numero natural: "))

soma = 0
i = 0

while(n > i):
	
	soma = soma + (1 / ((i * 2 * i + 1) * (3 ** i))) * (12 ** 0.5)
	i = i + 1

print(round(soma , 8))
-- OUTPUT:
3.90018315
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:43:03) 
-- CODE:

n = int(input("Insira o numero natural: "))

soma = 0
i = 0

while(n > i):
	
	soma = soma + (1 / ((2 * i + 1) * (3 ** i))) * (12 ** 0.5)
	i = i + 1

print(round(soma , 8))
-- EXECUTION TIME:
0.171616
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.95087246
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.95087368
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.95082935
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:43:05) 
-- CODE:

n = int(input("Insira o numero natural: "))

soma = 0
i = 0

while(n > i):
	
	soma = soma + (1 / ((2 * i + 1) * (3 ** i))) * (12 ** 0.5)
	i = i + 1

print(round(soma , 8))
-- OUTPUT:
3.95087246
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:43:57) 
-- CODE:

n = int(input("Insira o numero natural: "))

soma = 0
i = 0

while(n > i):
	
	soma = soma +((-1)**i)*(1 / ((2 * i + 1) * (3 ** i))) * (12 ** 0.5)
	i = i + 1

print(round(soma , 8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 10:44:44) 
-- CODE:

n = int(input("Insira o numero natural: "))

soma = 0
i = 0

while(n > i):
	
	soma = soma +(12 ** 0.5)*((-1)**i)*(1 / ((2 * i + 1) * (3 ** i)))
	i = i + 1

print(round(soma , 8))
-- OUTPUT:
3.1415933
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 10:45:04) 
-- CODE:

n = int(input("Insira o numero natural: "))

soma = 0
i = 0

while(n > i):
	
	soma = soma +(12 ** 0.5)*((-1)**i)*(1 / ((2 * i + 1) * (3 ** i)))
	i = i + 1

print(round(soma , 8))
-- EXECUTION TIME:
0.211848
-- TEST CASE 1:
---- input:
11
---- correct output:
3.1415933
---- user output:
3.1415933
-- TEST CASE 2:
---- input:
15
---- correct output:
3.14159266
---- user output:
3.14159266
-- TEST CASE 3:
---- input:
8
---- correct output:
3.14156872
---- user output:
3.14156872
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
